# SIEVE

./: CMakeLists.txt  README.md  README.txt
include/: sieve.h
src/: sieve.c
tests/: test.c
